# workshop-media-party

./: .env.sample  .gitignore  main.ipynb  pyproject.toml  qna.json
scripts/: main.py  projection.py  viz.py
workshop/: __init__.py
workshop/agent/: __init__.py  base_agent.py  rag_agent.py
workshop/dataset/: __init__.py  analisis_fmi.py  argendata_topicos.py  download_from_repo.py
workshop/pipeline/: __init__.py  extract.py  transform.py  visualize.py
workshop/utils/: __init__.py  cuda.py  github.py  render.py  sentence_transformers.py  umap.py  uuid_generator.py
